--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^8.7.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.0.1",
